--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
-.col-12 {filter:blur(15px);}
+.col-12 {position:absolute; top:0; left:0; width:100%; height:100%; filter: blur(15px); }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
