--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,6 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
-.col-12 {position:absolute; top:0; left:0; width:100%; height:100%; filter: blur(15px); }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -3999,3 +3998,5 @@ input, select, textarea {
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
 	}
+.row gtr-50 gtr-uniform { position:relative; }
+.col-12 {position:absolute; top:0; left:0; width:100%; height:100%; filter: blur(15px); }
